test/expected/explain_bl_ai.out
explain int (^b)()[]
                  ^
19: error: block returning array; did you mean block returning pointer?
